--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html, body { height: 100%; }
 body {
   background-color: #FFF;
   font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
+  font-size: normal;
   text-align: center;
 }
 
@@ -25,9 +25,12 @@ h1, h2, h3, h4, h5, h6 {
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
 
-a         { color: #00a; }
+a         {
+	color: #009;
+	text-decoration: none;
+}
 a:hover   { color: #000; }
-a:visited { color: #a0a; }
+a:visited { color: #707; }
 
 /*****************************************************************************/
 /*
@@ -36,7 +39,9 @@ a:visited { color: #a0a; }
 /*****************************************************************************/
 .posts {
   list-style-type: none;
+/*
   margin-bottom: 2em;
+*/
 }
 
 .posts li {
@@ -44,7 +49,7 @@ a:visited { color: #a0a; }
 }
 
 .posts span {
-  color: #aaa;
+  color: #333;
   font-family: Monaco, "Courier New", monospace;
   font-size: 80%;
 }
@@ -55,12 +60,46 @@ a:visited { color: #a0a; }
 /*
 /*****************************************************************************/
 
+html:after {
+	content: "";
+	opacity: 0.5;
+	background: url(/images/swamp.png);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
+	z-index: -1;   
+}
+
 .site {
-  font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
+	font-size: 150%;
+	text-align: justify;
+	width: 800px;
+	padding-top: 3em;
+	margin: 0px auto;
+	line-height: 1.5em;
+}
+
+.site > .content {
+	padding: 1em;
+	background-color: #eee;
+	border: solid 1em #eee;
+	border-radius: 20px;
+}
+
+.h-center {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#header-logo {
+	display: block;
+	width: 50px;
+	height: auto;
 }
 
 .header a {
@@ -95,11 +134,18 @@ a:visited { color: #a0a; }
 }
 
 .footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
+	position: fixed;
+	left: 0px;
+	width: 100%;
+	bottom: .3em;
+	font-size: 80%;
+	color: #333;
+	overflow: hidden;
+}
+
+.footer > .h-center {
+	width: 800px;
+	border-top: 4px solid #a00;
 }
 
 .footer .contact {
@@ -108,7 +154,7 @@ a:visited { color: #a0a; }
 }
 
 .footer .contact a {
-  color: #8085C1;
+  color: #336;
 }
 
 .footer .rss {
