--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,11 @@
 			</div>
 			
 			<div class="content">
-			{{ content }}
+				{% if page.url == '/index.html' %}
+					{% capture intro %}{% include intro.markdown %}{% endcapture %}
+					{{ intro  | markdownify}}
+				{% endif %}
+				{{ content }}
 			</div>
 
 			<div class="footer">
