--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,34 +14,43 @@
 
 	</head>
 	<body>
-		<div class ="site">
-			<div class="header">
-				<a href="/"><img id="header-logo" src="/favicon.ico" /></a>
-				<h1><a href="/">{{ site.name }}</a></h1>
-				<h2><a href="">Blogposts</a></h2>
-				<h2><a href="/about.html">About</a></h2>
-			</div>
-			
-			<div class="content">
-				{{ content }}
-			</div>
-			
-			<div class="footer">
-			<div class="h-center">
-				<div class="contact">
-					<p>
-						Team Croggle<br />
-					</p>
+		<div id="site" class="top-shadow">
+			<div id="content">
+				<div id="header">
+					<a href="/"><img id="header-logo" src="/favicon.ico" /></a>
+					<h1><a href="/">{{ site.name }}</a></h1>
+					<ul id="navbar">
+						<li>
+							<h2><a href="/">Blogposts</a></h2>
+						</li>
+						<li>
+							<h2><a href="/about.html">About</a></h2>
+						</li>
+					</ul>
 				</div>
-				<div class="contact">
-					<p>
-						<a href="https://github.com/TeamCroggle">github.com/TeamCroggle</a><br />
-						<!-- <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br /> -->
-					</p>
+				
+				<div id="posts">
+					{{ content }}
 				</div>
 			</div>
-		</div>
-		<div id="footer-space"></div>
+				
+			<div id="footer-space">
+				<div id="footer">
+					<div id="footer-content">
+						<div class="contact">
+							<p>
+								Team Croggle<br />
+							</p>
+						</div>
+						<div class="contact">
+							<p>
+								<a href="https://github.com/TeamCroggle">github.com/TeamCroggle</a><br />
+								<!-- <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br /> -->
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
