--- a/css/main.css
+++ b/css/main.css
@@ -90,8 +90,9 @@ html:after {
   right: 0px;
   margin: 0px;
 }
-#navbar > * {
+#navbar > li {
   display: inline-block;
+  margin-left: 30px;
 }
 #content {
   background-color: #fff;
@@ -136,6 +137,7 @@ html:after {
 }
 #footer-content > * {
   display: inline-block;
+  margin-right: 30px;
 }
 /**
  * I've been playing around with differnt css features to realize a top-only,
@@ -151,8 +153,8 @@ html:after {
   content: " ";
   position: absolute;
   top: 0px;
-  left: -10px;
-  width: 10px;
+  left: -3px;
+  width: 3px;
   height: 100%;
   display: inline-block;
   background: -webkit-linear-gradient(top, transparent, #ffffff 15%);
@@ -164,8 +166,8 @@ html:after {
   content: " ";
   position: absolute;
   top: 0px;
-  right: -10px;
-  width: 10px;
+  right: -3px;
+  width: 3px;
   height: 100%;
   display: inline-block;
   background: -webkit-linear-gradient(top, transparent, #ffffff 15%);
