--- a/css/main.less
+++ b/css/main.less
@@ -104,8 +104,9 @@ html:after {
 	bottom: 0px;
 	right: 0px;
 	margin: 0px;
-	& > * {
+	& > li {
 		display: inline-block;
+		margin-left: 30px;
 	}
 }
 
@@ -155,6 +156,7 @@ html:after {
 	padding: @n-content-padding / 2;
 	& > * {
 		display: inline-block;
+		margin-right: 30px;
 	}
 }
 
@@ -172,8 +174,8 @@ html:after {
 	content: " ";
 	position: absolute;
 	top: 0px;
-	left: -10px;
-	width: 10px;
+	left: -3px;
+	width: 3px;
 	height: 100%;
 	display: inline-block;
 	background: -webkit-linear-gradient(top, transparent, @c-background 15%);
@@ -187,8 +189,8 @@ html:after {
 	content: " ";
 	position: absolute;
 	top: 0px;
-	right: -10px;
-	width: 10px;
+	right: -3px;
+	width: 3px;
 	height: 100%;
 	display: inline-block;
 	background: -webkit-linear-gradient(top, transparent, @c-background 15%);
