--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
 
 	</head>
 	<body>
+		<div id="background-left"></div>
+		<div id="background-right"></div>
 		<div id="site" class="top-shadow">
 			<div id="content">
 				<div id="header">
