--- a/css/main.less
+++ b/css/main.less
@@ -217,6 +217,7 @@ html {
 	background: -o-linear-gradient(bottom, transparent, @c-background 15%);
 	background: -moz-linear-gradient(bottom, transparent, @c-background 15%);
 	background: linear-gradient(to bottom, transparent, @c-background 15%);
+	border-bottom: solid 2px @c-background; // hide part of bottom shadow not covered by footer
 	z-index: 1;
 }
 
@@ -233,6 +234,7 @@ html {
 	background: -o-linear-gradient(bottom, transparent, @c-background 15%);
 	background: -moz-linear-gradient(bottom, transparent, @c-background 15%);
 	background: linear-gradient(to bottom, transparent, @c-background 15%);
+	border-bottom: solid 2px @c-background; // hide part of bottom shadow not covered by footer
 }
 
 
