--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@ body {
   top: 0;
   left: 0;
   width: 50%;
-  height: 70%;
+  height: 100%;
+  max-height: 50vw;
   background-image: url("/images/swamp.jpg");
   background-repeat: no-repeat;
   background-position: left top;
@@ -45,7 +46,8 @@ body {
   top: 0;
   right: 0;
   width: 50%;
-  height: 70%;
+  height: 100%;
+  max-height: 50vw;
   background-image: url("/images/egypt.jpg");
   background-repeat: no-repeat;
   background-position: right top;
@@ -53,32 +55,30 @@ body {
 }
 #background-left:after {
   content: " ";
-  position: fixed;
   display: inline-block;
-  width: 50%;
+  width: 100%;
   height: 100%;
   top: 0px;
   left: 0px;
-  background: -moz-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: -webkit-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: -o-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: -ms-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: radial-gradient(circle at 0 0, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
+  background: -moz-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: -webkit-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: -o-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: -ms-radial-gradient(0 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: radial-gradient(circle farthest-side at 0 0, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
   z-index: 0;
 }
 #background-right:after {
   content: " ";
-  position: fixed;
   display: inline-block;
-  width: 50%;
+  width: 100%;
   height: 100%;
   top: 0px;
   right: 0px;
-  background: -moz-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: -webkit-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: -o-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: -ms-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
-  background: radial-gradient(circle at 100% 0, rgba(255, 255, 255, 0.1) 0%, #ffffff 50%);
+  background: -moz-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: -webkit-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: -o-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: -ms-radial-gradient(100% 0, circle cover, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
+  background: radial-gradient(circle farthest-side at 100% 0, rgba(255, 255, 255, 0.1) 0%, #ffffff 90%);
   z-index: 0;
 }
 #site {
