--- a/css/main.less
+++ b/css/main.less
@@ -46,7 +46,8 @@ html {
 	top: 0;
 	left: 0;
 	width: 50%;
-	height: 70%;
+	height: 100%;
+	max-height: 50vw;
 	background-image: url("/images/swamp.jpg");
 	background-repeat:no-repeat;
 	background-position: left top;
@@ -59,7 +60,8 @@ html {
 	top: 0;
 	right: 0;
 	width: 50%;
-	height: 70%;
+	height: 100%;
+	max-height: 50vw;
 	background-image: url("/images/egypt.jpg");
 	background-repeat: no-repeat;
 	background-position: right top;
@@ -69,37 +71,37 @@ html {
 
 #background-left:after {
 	content: " ";
-	position: fixed;
+	//position: fixed;
 	display: inline-block;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 	top: 0px;
 	left: 0px;
 
-	@percent: 50%;
+	@percent: 90%;
 	background: -moz-radial-gradient(0 0, circle cover, rgba(255,255,255,0.1) 0%, rgba(255,255,255,1) @percent);
 	background: -webkit-radial-gradient(0 0, circle cover, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
 	background: -o-radial-gradient(0 0, circle cover, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
 	background: -ms-radial-gradient(0 0, circle cover, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
-	background: radial-gradient(circle at 0 0, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
+	background: radial-gradient(circle farthest-side at 0 0, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
 	z-index: 0;
 }
 
 #background-right:after {
 	content: " ";
-	position: fixed;
+	//position: fixed;
 	display: inline-block;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 	top: 0px;
 	right: 0px;
 
-	@percent: 50%;
+	@percent: 90%;
 	background: -moz-radial-gradient(100% 0, circle cover, rgba(255,255,255,0.1) 0%, rgba(255,255,255,1) @percent);
 	background: -webkit-radial-gradient(100% 0, circle cover, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
 	background: -o-radial-gradient(100% 0, circle cover, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
 	background: -ms-radial-gradient(100% 0, circle cover, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
-	background: radial-gradient(circle at 100% 0, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
+	background: radial-gradient(circle farthest-side at 100% 0, rgba(255,255,255,0.1) 0%,rgba(255,255,255,1) @percent);
 	z-index: 0;
 }
 
